src/utils/snapshots/aoc_rust_2024__utils__point__tests__neighborhoods-2.snap
---
source: src/utils/point.rs
expression: neighbors
snapshot_kind: text
---
[
    Point {
        x: -1,
        y: 0,
    },
    Point {
        x: 1,
        y: 0,
    },
    Point {
        x: 0,
        y: -1,
    },
    Point {
        x: 0,
        y: 1,
    },
    Point {
        x: -1,
        y: -1,
    },
    Point {
        x: -1,
        y: 1,
    },
    Point {
        x: 1,
        y: -1,
    },
    Point {
        x: 1,
        y: 1,
    },
]
